chrome image stretching fixed

--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -11,6 +11,7 @@ header {
 
 img {
     width: 400px;
+    height: auto;
     padding: 20px 0;
 }
 
@@ -213,6 +214,12 @@ footer p {
     .logo {
         display: flex;
         justify-content: center;
+    }
+
+    .logo img {
+        width: 300px;
+        height: 120px;
+        display: block;
     }
 }
 
