--- a/styles/style.css
+++ b/styles/style.css
@@ -172,6 +172,7 @@ header {
 
 img {
   width: 400px;
+  height: auto;
   padding: 20px 0; }
 
 .submit-button,
@@ -376,7 +377,11 @@ footer p {
     display: flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center; } }
+    justify-content: center; }
+  .logo img {
+    width: 300px;
+    height: 120px;
+    display: block; } }
 
 @media (max-width: 475px) {
   .wrapper {
